src/test/ui/parser/lex-bad-char-literals-2.stderr
error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-2.rs:3:5
   |
LL |     'nope'
   |     ^^^^^^
help: if you meant to write a `str` literal, use double quotes
   |
LL |     "nope"
   |     ^^^^^^

error[E0601]: `main` function not found in crate `lex_bad_char_literals_2`
   |
   = note: consider adding a `main` function to `$DIR/lex-bad-char-literals-2.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
